--- a/cryptoios/cryptoios/ViewControlelrs/Moe/Main/MoeCardCell.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/Moe/Main/MoeCardCell.xib
@@ -27,7 +27,7 @@
                     <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KMo-yu-S6U">
                         <rect key="frame" x="0.0" y="389" width="261" height="171"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="18 ETH" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gr-VI-grG" userLabel="Eth">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="== ETH" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gr-VI-grG" userLabel="Eth">
                                 <rect key="frame" x="0.0" y="0.0" width="261" height="20.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
